connect add edit and by id from back-end with fornt-end

--- a/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.html
+++ b/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.html
@@ -85,7 +85,11 @@
           text="Change"
           [style]="{ borderRadius: '5px' }"
         ></app-button>
-        <app-button text="Save" [style]="{ borderRadius: '5px' }"></app-button>
+        <app-button
+          text="Logout"
+          (btnClick)="onLogoutClick()"
+          [style]="{ borderRadius: '5px' }"
+        ></app-button>
       </div>
     </div>
   </div>
