finish part 4 with api

--- a/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.html
+++ b/job-seeker-app/src/app/feature/auth/components/profile-panel/profile-panel.component.html
@@ -82,13 +82,9 @@
       </div>
       <div class="profile-panel-controls-container">
         <app-button
-          text="Change"
-          [style]="{ borderRadius: '5px' }"
-        ></app-button>
-        <app-button
           text="Logout"
           (btnClick)="onLogoutClick()"
-          [style]="{ borderRadius: '5px' }"
+          [style]="{ borderRadius: '5px', width: '120px' }"
         ></app-button>
       </div>
     </div>
